--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IllnessActivity"></activity>
+        <activity android:name=".Database"></activity>
+        <activity android:name=".IllnessActivity" />
         <activity android:name=".InjuryActivity" />
         <activity
             android:name=".SplashActivity"
